daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-daemonset
spec:  #deployment's specification
  selector:
    matchLabels:
      app: nginx
  template:
    metadata: 
      labels: 
        app: nginx
    spec: #pod's specification
      containers: 
      - name: nginx
        image: nginx:latest
        ports: 
        - containerPort: 80
