deployment-nginx-with-service-and-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  #namespace: edgar
spec:  #deployment's specification
  replicas: 1
  selector:
    matchLabels:
      app: v1
  template:
    metadata: 
      labels: 
        app: v1
    spec: #pod's specification
      containers: 
      - name: nginx
        image: nginx:latest
        ports: 
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: nginx-conf 

      volumes: 
      - name: nginx-conf
        configMap:
          name: nginx-conf
          items:
          - key: nginx-conf
            path: nginx-conf
