deployment-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  #namespace: edgar
spec:  #deployment's specification
  strategy:
      type: RollingUpdate
      rollingUpdate: 
        maxUnavailable: 1
  replicas: 4
  selector:
    matchLabels:
      app: v1
  template:
    metadata: 
      labels: 
        app: v1
    spec: #pod's specification
      imagePullSecrets:
      - name: regcred
      containers: 
      - name: nginx
        image: nginx:latest
        ports: 
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 5
          failureThreshold: 3
