pod-readiness.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    test: readiness
  name: readiness-exec
spec:
  containers:
  - name: readiness
    image: busybox:latest
    args:
    - /bin/sh
    - -c
    - sleep 5; touch /tmp/healthy; tail -f /dev/null
    readinessProbe:
      exec:
        command:
        - cat
        - /tmp/healthy
      initialDelaySeconds: 5
      periodSeconds: 5
      failureThreshold: 1
  restartPolicy: Always
