pod-ubuntu.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-pod
  labels:
    app: v2
spec: #pod's specification
  volumes: 
  - name: my-volume
    emptyDir: {}
  containers: 
  - name: ubuntu
    image: ubuntu:22.04
    command: ["/bin/sh", "-c"]
    args: ["shuf -i 0-100 -n 1 >> /data/random-number.txt && cat /data/random-number.txt"]
    volumeMounts:
    - name: my-volume
      mountPath: /data
