wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: wordpress-data
              mountPath: /var/www/html
            - name: nginx-config
              mountPath: /etc/nginx/conf.d

        - name: php-fpm
          image: wordpress:php7.4-fpm
          volumeMounts:
            - name: wordpress-data
              mountPath: /var/www/html
      volumes:
        - name: wordpress-data
          emptyDir: {}
        - name: nginx-config
          configMap:
            name: nginx-config
