node-red.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-red
  labels:
    app: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: v1
  template:
    metadata: 
      labels: 
        app: v1
    spec:
      containers: 
      - name: node-red
        image: nodered/node-red:latest
        ports: 
        - containerPort: 1880
---
apiVersion: v1
kind: Service
metadata:
  name: node-red-service
spec:
    selector:
      app: v1
    type: ClusterIP
    ports: 
      - protocol: TCP
        port: 80
        targetPort: 1880
