service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: v1
  type: ClusterIP
  ports:
  - protocol: TCP 
    port: 80
    targetPort: 8080
  # - protocol: TCP 
  #   port: 8080
  #   targetPort: 8080
  #   nodePort: 30009
