ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec: 
  ingressClassName: nginx
  rules:
    - host: k8s.edgarmarkosyan.com 
      http: 
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: node-red-service
              port:
                number: 80
